--- a/assets/css/growim.css
+++ b/assets/css/growim.css
@@ -828,11 +828,11 @@ h6 {
   background: linear-gradient(90deg, var(--growim-primary, #635AD9) 0%, var(--growim-secondary, #219BE4) 100%);
   background-clip: text;
   -webkit-text-fill-color: transparent;
-  text-transform: uppercase;
+  text-transform: none;
   display: inline-block;
   font-weight: 700;
   font-size: 16px;
-  line-height: 1em;
+  line-height: normal;
   margin-bottom: 13px;
 }
 .sec-title__title {
@@ -4716,9 +4716,7 @@ h6 {
   background-image: linear-gradient(90deg, #fff5ee 0%, #fff4ec 100%);
   box-shadow: 0px 3px 18px rgba(var(--growim-black-rgb, 23, 1, 44), 0.07);
 }
-.main-header--two.sticky-header--cloned .main-header__logo img:nth-child(1) {
-  opacity: 1;
-}
+
 .main-header--two.sticky-header--cloned .main-header__inner__bg {
   border-radius: 0;
 }
@@ -4899,7 +4897,7 @@ h6 {
   }
 }
 .main-header--three.sticky-header--cloned .main-header__logo img:nth-child(1) {
-  opacity: 1;
+  /* opacity: 1; */
 }
 .main-header--four {
   background-color: transparent;
@@ -4975,7 +4973,7 @@ h6 {
   }
 }
 .main-header--four.sticky-header--cloned .main-header__logo img:nth-child(1) {
-  opacity: 1;
+  /* opacity: 1; */
 }
 .main-header--five__inner {
   position: relative;
@@ -5048,7 +5046,7 @@ h6 {
   display: none;
 }
 .main-header--five.sticky-header--cloned .main-header__logo img:nth-child(1) {
-  opacity: 1;
+  /* opacity: 1; */
 }
 
 .sticky-header--cloned {
@@ -5065,12 +5063,12 @@ h6 {
   visibility: hidden;
   transition: transform 500ms ease, visibility 500ms ease;
 }
-.sticky-header--cloned .main-header__logo img:nth-child(1) {
+/* .sticky-header--cloned .main-header__logo img:nth-child(1) {
   opacity: 0;
 }
 .sticky-header--cloned .main-header__logo img:nth-child(2) {
   opacity: 1;
-}
+} */
 .sticky-header--cloned.active {
   transform: translateY(0%);
   visibility: visible;
