--- a/assets/css/growim.css
+++ b/assets/css/growim.css
@@ -842,6 +842,15 @@ h6 {
   font-weight: 800;
   margin: 0;
 }
+.sec-title__title.white-text{
+  color: #fff;
+}
+.testimonials-one__item__content.white-text{
+  color: #fff;
+}
+.testimonials-one__item__name.white-text{
+  color: #fff;
+}
 .sec-title__title span {
   background-image: linear-gradient(90deg, var(--growim-primary, #635AD9) 0%, var(--growim-base, #5B3AEE) 100%);
   background-clip: text;
@@ -3457,11 +3466,13 @@ h6 {
 }
 .mail-section__image {
   position: relative;
-  margin-top: -39px;
+  height: 100%;
 }
 .mail-section__image img {
   max-width: 100%;
-  height: auto;
+  height: 300px;
+    position: absolute;
+    bottom: -17px;
 }
 @media (max-width: 991px) {
   .mail-section__image {
@@ -6541,7 +6552,8 @@ body.megamenu-popup-active .mobile-nav__content {
 --------------------------------------------------------------*/
 .testimonials-one {
   position: relative;
-  padding-top: 120px;
+  /* padding-top: 120px; */
+  background: #31187a;
 }
 @media (max-width: 767px) {
   .testimonials-one {
@@ -6690,6 +6702,7 @@ body.megamenu-popup-active .mobile-nav__content {
 }
 .testimonials-one__item__designation {
   margin: 0;
+  color: #ccc;
 }
 .testimonials-one__item__quote {
   position: absolute;
@@ -15265,16 +15278,19 @@ body.megamenu-popup-active .mobile-nav__content {
   }
 }
 .about-one__image__clients {
-  position: relative;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  margin: 0;
   display: flex;
   align-items: center;
+  justify-self: center;
   background-color: var(--growim-white, #fff);
   border-radius: 100px;
   max-width: 330px;
   padding: 17px 15px 17px 22px;
   transition: all 400ms linear;
-  margin-left: 40px;
-  margin-top: -20px;
 }
 @media (max-width: 767px) {
   .about-one__image__clients {
@@ -15320,10 +15336,10 @@ body.megamenu-popup-active .mobile-nav__content {
   align-items: center;
   border-top: 1px solid var(--growim-border-color, #EAF3F8);
   border-bottom: 1px solid var(--growim-border-color, #EAF3F8);
-  gap: 45px;
+  gap: 15px;
   margin: 0 0 30px;
   list-style: none;
-  padding: 40px 0;
+  padding: 30px 0;
 }
 @media (max-width: 767px) {
   .about-one__list {
@@ -15348,11 +15364,11 @@ body.megamenu-popup-active .mobile-nav__content {
   flex-shrink: 0;
 }
 .about-one__list__icon img {
-  width: 36px;
-  height: 36px;
+  width: 60px;
+  height: 60px;
 }
 .about-one__list__number {
-  font-size: 30px;
+  font-size: 20px;
   line-height: 1;
   font-weight: 700;
   margin: 0 0 2px;
@@ -15360,7 +15376,7 @@ body.megamenu-popup-active .mobile-nav__content {
 .about-one__list__text {
   /* text-transform: uppercase; */
   margin: 0;
-  font-size: 16px;
+  font-size: 14px;
   font-weight: 500;
 }
 .about-one--page {
@@ -16844,10 +16860,12 @@ body.megamenu-popup-active .mobile-nav__content {
 .service-three__item {
   text-align: center;
   position: relative;
-  min-height: 390px;
+  height: 350px;
   padding: 37px 20px 30px;
   z-index: 2;
-  background-color: rgba(165, 136, 249, 0.1);
+  background: #0575E6;
+    background: -webkit-linear-gradient(to bottom, #021B79, #0575E6);
+    background: linear-gradient(to bottom, #021B79, #0575E6);
   border-radius: 20px;
   counter-increment: count;
   overflow: hidden;
@@ -16875,7 +16893,8 @@ body.megamenu-popup-active .mobile-nav__content {
 }
 .service-three__item__image {
   position: relative;
-  margin: 0 0 18px;
+  margin: 20px auto 40px;
+  max-width: 80px;
 }
 .service-three__item__image img {
   max-width: 100%;
@@ -16887,6 +16906,7 @@ body.megamenu-popup-active .mobile-nav__content {
   font-weight: 700;
   text-transform: capitalize;
   margin: 0 0 25px;
+  color: #fff;
 }
 .service-three__item__title br {
   display: block;
@@ -16906,6 +16926,8 @@ body.megamenu-popup-active .mobile-nav__content {
   font-weight: 500;
   text-transform: capitalize;
   margin: 0;
+  font-size: .9rem;
+  color: #fff;
 }
 
 .service-four {
