--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -104,3 +104,10 @@
     width: 232px;
     height: 232px;
 }
+
+.contact-two .support-bg{
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    transform: scale(1.8) translate(-15%, -15%);
+}
