--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -117,3 +117,61 @@
     padding-bottom: 0;
     height: 100px;
 }
+
+.anime-title {
+    line-height: unset;
+    height: unset;
+}
+#flip {
+    height:60px;
+    overflow:hidden;
+    display: inline-block;
+    margin-left: 5px;
+    vertical-align: bottom;
+  }
+  
+  #flip > div > div {
+    color:#fff;
+    padding:4px 12px;
+    height:60px;
+    margin-bottom:45px;
+    display:inline-block;
+  }
+  
+  #flip div:first-child {
+    animation: show 5s linear infinite;
+  }
+  #flip >div:nth-child(2) {
+    transform: translateY(-5px);
+  }
+  #flip >div:nth-child(3) {
+    transform: translateY(-15px);
+  }
+  #flip div div {
+    background:#42c58a;
+  }
+  #flip div:first-child div {
+    background:#4ec7f3;
+  }
+  #flip div:last-child div {
+    background:#DC143C;
+  }
+  
+  @keyframes show {
+    0% {margin-top:-270px;}
+    5% {margin-top:-180px;}
+    33% {margin-top:-180px;}
+    38% {margin-top:-90px;}
+    66% {margin-top:-90px;}
+    71% {margin-top:0px;}
+    99.99% {margin-top:0px;}
+    100% {margin-top:-270px;}
+  }
+
+  .google-map__contact{
+    background: url(../images/map.svg) no-repeat center center / 100%;
+    height: 50vh;
+  }
+  .main-footer__top.without-letstalk {
+    padding-top: 100px;
+  }
