--- a/assets/css/growim.css
+++ b/assets/css/growim.css
@@ -6295,8 +6295,8 @@ body.megamenu-popup-active .mobile-nav__content {
 }
 .counter-one__wrapper__bg {
   position: absolute;
-  left: -25%;
-  bottom: -25%;
+  right: -5%;
+  bottom: 15%;
   width: 700px;
   height: 700px;
 }
@@ -12403,7 +12403,7 @@ body.megamenu-popup-active .mobile-nav__content {
 --------------------------------------------------------------*/
 .google-map {
   position: relative;
-  margin-bottom: -114px;
+  /* margin-bottom: -114px; */
 }
 .google-map iframe {
   position: relative;
@@ -12421,12 +12421,17 @@ body.megamenu-popup-active .mobile-nav__content {
   width: 100%;
 }
 .google-map__info {
-  max-width: 358px;
+  max-width: 29.33%;
   background-color: var(--growim-primary, #635AD9);
-  margin-left: auto;
-  margin-right: 30px;
+  margin: 0 2%;
   padding: 25px 30px 18px;
   position: relative;
+}
+.locations{
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+
 }
 @media (max-width: 767px) {
   .google-map__info {
@@ -15325,7 +15330,6 @@ body.megamenu-popup-active .mobile-nav__content {
   padding-bottom: 20px;
 }
 .about-one__content__text {
-  text-transform: capitalize;
   font-weight: 500;
   margin: 0 0 31px;
 }
@@ -16927,7 +16931,6 @@ body.megamenu-popup-active .mobile-nav__content {
 }
 .service-three__item__text {
   font-weight: 500;
-  text-transform: capitalize;
   margin: 0;
   font-size: .9rem;
   color: #fff;
@@ -18572,6 +18575,7 @@ body.megamenu-popup-active .mobile-nav__content {
 }
 .portfolio-four__item {
   position: relative;
+  width: 550px;
   height: auto;
   transition: all 500ms ease;
   border-radius: 20px;
