--- a/assets/css/growim.css
+++ b/assets/css/growim.css
@@ -4666,9 +4666,10 @@ h6 {
   .main-header__logo {
     width: auto;
   }
+
 }
 .main-header__logo img {
-  max-width: 100%;
+  max-width: 50px;
 }
 .main-header__logo img:nth-child(2) {
   position: absolute;
@@ -6240,6 +6241,8 @@ body.megamenu-popup-active .mobile-nav__content {
   padding: 362px 0 ;
   margin: 4% 120px 0;
   height: 656px;
+  border-radius: 30px;
+  overflow: hidden;
 }
 @media (max-width: 1600px) {
   .counter-one {
@@ -6270,8 +6273,12 @@ body.megamenu-popup-active .mobile-nav__content {
   background-size: cover;
 }
 .counter-one__wrapper {
-  position: relative;
+  position: absolute;
+  height: 100%;
+  top: 0;
+  right: 0;
   display: flex;
+  flex-wrap: wrap;
   background-color: var(--growim-black, #17012C);
   border-radius: 30px 0 30px 0;
   padding: 45px 75px 46px 65px;
@@ -6280,6 +6287,19 @@ body.megamenu-popup-active .mobile-nav__content {
   justify-content: space-between;
   max-width: 1045px;
   margin-left: auto;
+}
+.counter-title{
+  flex: 1 100%;
+  margin-bottom: 100px;
+}
+.counter-title h2 {
+  color: #fff;
+  font-size: 3rem;
+}
+.counter-title h5 {
+  color: #fff;
+  font-size: 1.5rem;
+  margin-top: 10px;
 }
 @media (max-width: 1199px) {
   .counter-one__wrapper {
@@ -16956,7 +16976,7 @@ body.megamenu-popup-active .mobile-nav__content {
 .service-four__item {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: start;
   text-align: center;
   position: relative;
   min-height: 490px;
@@ -17018,7 +17038,7 @@ body.megamenu-popup-active .mobile-nav__content {
   position: relative;
   display: inline-block;
   max-width: 120px;
-  margin: 0 auto 25px;
+  margin: 0 auto 45px;
   transform: scale(1);
   transition: transform .2s ease;
 }
